[package]
name = "photon-image"
authors = ["karthik2804 <karthik.ganeshram@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
photon-rs = { git = "https://github.com/karthik2804/photon", branch = "wasi_feature_gating", default-features = false }
spin-sdk = "3.0.0"
url = "2.5.2"

[workspace]
